y.output
Terminals unused in grammar

   SEMICOLON
   OPENSQUARE
   CLOSESQUARE
   CONTINUE


Grammar

    0 $accept: Start $end

    1 Start: S

    2 S: code DOT

    3 code: inner_code
    4     | code DOT inner_code

    5 inner_code: assignment
    6           | declaration
    7           | Ifstmt
    8           | whileloop
    9           | switchstmt
   10           | function_call
   11           | forloop
   12           | repeat
   13           | function
   14           | RETURN EXPR
   15           | RETURN
   16           | BREAK

   17 datatype: INTTYPE
   18         | FLOATTYPE
   19         | BOOLTYPE
   20         | STRINGTYPE

   21 const_type: datatype CONST

   22 declaration: datatype inner_declaration
   23            | const_type inner_declaration

   24 inner_declaration: IDENTIFIER
   25                  | IDENTIFIER EQUAL EXPR
   26                  | IDENTIFIER EQUAL BOOLEAN
   27                  | IDENTIFIER EQUAL STRING
   28                  | IDENTIFIER EQUAL condition

   29 if_start: IF OPENBRACKET condition CLOSEDBRACKET

   30 $@1: /* empty */

   31 Ifstmt: if_start OPENBRACE enter_scope code DOT CLOSEDBRACE exit_scope $@1 else_stmt
   32       | if_start OPENBRACE enter_scope code DOT CLOSEDBRACE exit_scope

   33 else_place: /* empty */

   34 else_stmt: ELSE else_place Ifstmt
   35          | ELSE else_place OPENBRACE enter_scope code DOT CLOSEDBRACE exit_scope

   36 repeat_start: /* empty */

   37 repeat: REPEAT OPENBRACE enter_scope repeat_start code DOT CLOSEDBRACE exit_scope UNTIL OPENBRACKET condition CLOSEDBRACKET

   38 for_loop_start: /* empty */

   39 forloop: FOR OPENBRACKET enter_scope iterator COMMA assignment CLOSEDBRACKET for_loop_start OPENBRACE code DOT CLOSEDBRACE exit_scope

   40 iterator: INTTYPE IDENTIFIER EQUAL EXPR TO EXPR
   41         | IDENTIFIER EQUAL EXPR TO EXPR

   42 while_start: WHILE OPENBRACKET condition CLOSEDBRACKET

   43 whileloop: while_start OPENBRACE enter_scope code DOT CLOSEDBRACE exit_scope

   44 parameters: datatype IDENTIFIER
   45           | datatype IDENTIFIER COMMA parameters

   46 function_header: datatype IDENTIFIER OPENBRACKET
   47                | VOIDTYPE IDENTIFIER OPENBRACKET

   48 function: function_header enter_scope parameters CLOSEDBRACKET OPENBRACE code DOT CLOSEDBRACE exit_scope
   49         | function_header CLOSEDBRACKET OPENBRACE enter_scope code DOT CLOSEDBRACE exit_scope

   50 function_call: IDENTIFIER OPENBRACKET list CLOSEDBRACKET
   51              | IDENTIFIER OPENBRACKET CLOSEDBRACKET

   52 list: EXPR
   53     | EXPR COMMA list

   54 switch_start: SWITCH OPENBRACKET IDENTIFIER CLOSEDBRACKET

   55 switchstmt: switch_start OPENBRACE enter_scope case_structure DEFAULT OPENBRACE enter_scope code DOT CLOSEDBRACE exit_scope CLOSEDBRACE exit_scope
   56           | switch_start OPENBRACE enter_scope case_structure CLOSEDBRACE exit_scope

   57 case_structure: inner_case
   58               | inner_case case_structure

   59 start_inner_case: CASE OPENBRACKET INTEGER CLOSEDBRACKET

   60 inner_case: start_inner_case OPENBRACE enter_scope code DOT CLOSEDBRACE exit_scope

   61 condition: condition AND inner_condition
   62          | condition OR inner_condition
   63          | NOT inner_condition
   64          | inner_condition
   65          | condition AND EXPR
   66          | condition OR EXPR
   67          | NOT EXPR

   68 inner_condition: OPENBRACKET condition CLOSEDBRACKET
   69                | EXPR GREATERTHAN EXPR
   70                | EXPR GREATERTHANEQ EXPR
   71                | EXPR LESSTHAN EXPR
   72                | EXPR LESSTHANEQ EXPR
   73                | EXPR EQUALITY BOOLEAN
   74                | EXPR EQUALITY EXPR
   75                | EXPR NOTEQUALITY BOOLEAN
   76                | EXPR NOTEQUALITY EXPR

   77 assignment: IDENTIFIER EQUAL EXPR
   78           | IDENTIFIER EQUAL STRING
   79           | IDENTIFIER EQUAL condition
   80           | IDENTIFIER INCREMENT
   81           | IDENTIFIER DECREMENT
   82           | IDENTIFIER PLUSEQ EXPR
   83           | IDENTIFIER MINUSEQ EXPR
   84           | IDENTIFIER MULTIPLYEQ EXPR
   85           | IDENTIFIER DIVIDEEQ EXPR

   86 EXPR: EXPR PLUS T
   87     | EXPR MINUS T
   88     | T

   89 T: T MULTIPLY M
   90  | T DIVIDE M
   91  | T MOD M
   92  | M

   93 M: G POWER M
   94  | G

   95 G: OPENBRACKET EXPR CLOSEDBRACKET
   96  | MINUS G
   97  | INTEGER
   98  | FLOAT
   99  | IDENTIFIER
  100  | function_call

  101 enter_scope: /* empty */

  102 exit_scope: /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
MINUS (258) 87 96
PLUS (259) 86
MULTIPLY (260) 89
DIVIDE (261) 90
OPENBRACKET (262) 29 37 39 42 46 47 50 51 54 59 68 95
CLOSEDBRACKET (263) 29 37 39 42 48 49 50 51 54 59 68 95
INTEGER (264) 59 97
STRING (265) 27 78
FLOAT (266) 98
BOOLEAN (267) 26 73 75
OPENBRACE (268) 31 32 35 37 39 43 48 49 55 56 60
CLOSEDBRACE (269) 31 32 35 37 39 43 48 49 55 56 60
SEMICOLON (270)
MOD (271) 91
POWER (272) 93
OPENSQUARE (273)
CLOSESQUARE (274)
COMMA (275) 39 45 53
BOOLTYPE (276) 19
INTTYPE (277) 17 40
FLOATTYPE (278) 18
STRINGTYPE (279) 20
IDENTIFIER (280) 24 25 26 27 28 40 41 44 45 46 47 50 51 54 77 78 79
    80 81 82 83 84 85 99
GREATERTHANEQ (281) 70
LESSTHAN (282) 71
GREATERTHAN (283) 69
LESSTHANEQ (284) 72
EQUALITY (285) 73 74
NOTEQUALITY (286) 75 76
INCREMENT (287) 80
DECREMENT (288) 81
EQUAL (289) 25 26 27 28 40 41 77 78 79
MINUSEQ (290) 83
PLUSEQ (291) 82
MULTIPLYEQ (292) 84
DIVIDEEQ (293) 85
AND (294) 61 65
OR (295) 62 66
NOT (296) 63 67
CONST (297) 21
IF (298) 29
ELSE (299) 34 35
DOT (300) 2 4 31 32 35 37 39 43 48 49 55 60
FOR (301) 39
TO (302) 40 41
REPEAT (303) 37
UNTIL (304) 37
BREAK (305) 16
CONTINUE (306)
WHILE (307) 42
SWITCH (308) 54
CASE (309) 59
DEFAULT (310) 55
RETURN (311) 14 15
VOIDTYPE (312) 47


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
Start (59)
    on left: 1, on right: 0
S (60)
    on left: 2, on right: 1
code (61)
    on left: 3 4, on right: 2 4 31 32 35 37 39 43 48 49 55 60
inner_code (62)
    on left: 5 6 7 8 9 10 11 12 13 14 15 16, on right: 3 4
datatype (63)
    on left: 17 18 19 20, on right: 21 22 44 45 46
const_type (64)
    on left: 21, on right: 23
declaration (65)
    on left: 22 23, on right: 6
inner_declaration (66)
    on left: 24 25 26 27 28, on right: 22 23
if_start (67)
    on left: 29, on right: 31 32
Ifstmt (68)
    on left: 31 32, on right: 7 34
$@1 (69)
    on left: 30, on right: 31
else_place (70)
    on left: 33, on right: 34 35
else_stmt (71)
    on left: 34 35, on right: 31
repeat_start (72)
    on left: 36, on right: 37
repeat (73)
    on left: 37, on right: 12
for_loop_start (74)
    on left: 38, on right: 39
forloop (75)
    on left: 39, on right: 11
iterator (76)
    on left: 40 41, on right: 39
while_start (77)
    on left: 42, on right: 43
whileloop (78)
    on left: 43, on right: 8
parameters (79)
    on left: 44 45, on right: 45 48
function_header (80)
    on left: 46 47, on right: 48 49
function (81)
    on left: 48 49, on right: 13
function_call (82)
    on left: 50 51, on right: 10 100
list (83)
    on left: 52 53, on right: 50 53
switch_start (84)
    on left: 54, on right: 55 56
switchstmt (85)
    on left: 55 56, on right: 9
case_structure (86)
    on left: 57 58, on right: 55 56 58
start_inner_case (87)
    on left: 59, on right: 60
inner_case (88)
    on left: 60, on right: 57 58
condition (89)
    on left: 61 62 63 64 65 66 67, on right: 28 29 37 42 61 62 65 66
    68 79
inner_condition (90)
    on left: 68 69 70 71 72 73 74 75 76, on right: 61 62 63 64
assignment (91)
    on left: 77 78 79 80 81 82 83 84 85, on right: 5 39
EXPR (92)
    on left: 86 87 88, on right: 14 25 40 41 52 53 65 66 67 69 70 71
    72 73 74 75 76 77 82 83 84 85 86 87 95
T (93)
    on left: 89 90 91 92, on right: 86 87 88 89 90 91
M (94)
    on left: 93 94, on right: 89 90 91 92 93
G (95)
    on left: 95 96 97 98 99 100, on right: 93 94 96
enter_scope (96)
    on left: 101, on right: 31 32 35 37 39 43 48 49 55 56 60
exit_scope (97)
    on left: 102, on right: 31 32 35 37 39 43 48 49 55 56 60


state 0

    0 $accept: . Start $end

    BOOLTYPE    shift, and go to state 1
    INTTYPE     shift, and go to state 2
    FLOATTYPE   shift, and go to state 3
    STRINGTYPE  shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    IF          shift, and go to state 6
    FOR         shift, and go to state 7
    REPEAT      shift, and go to state 8
    BREAK       shift, and go to state 9
    WHILE       shift, and go to state 10
    SWITCH      shift, and go to state 11
    RETURN      shift, and go to state 12
    VOIDTYPE    shift, and go to state 13

    Start            go to state 14
    S                go to state 15
    code             go to state 16
    inner_code       go to state 17
    datatype         go to state 18
    const_type       go to state 19
    declaration      go to state 20
    if_start         go to state 21
    Ifstmt           go to state 22
    repeat           go to state 23
    forloop          go to state 24
    while_start      go to state 25
    whileloop        go to state 26
    function_header  go to state 27
    function         go to state 28
    function_call    go to state 29
    switch_start     go to state 30
    switchstmt       go to state 31
    assignment       go to state 32


state 1

   19 datatype: BOOLTYPE .

    $default  reduce using rule 19 (datatype)


state 2

   17 datatype: INTTYPE .

    $default  reduce using rule 17 (datatype)


state 3

   18 datatype: FLOATTYPE .

    $default  reduce using rule 18 (datatype)


state 4

   20 datatype: STRINGTYPE .

    $default  reduce using rule 20 (datatype)


state 5

   50 function_call: IDENTIFIER . OPENBRACKET list CLOSEDBRACKET
   51              | IDENTIFIER . OPENBRACKET CLOSEDBRACKET
   77 assignment: IDENTIFIER . EQUAL EXPR
   78           | IDENTIFIER . EQUAL STRING
   79           | IDENTIFIER . EQUAL condition
   80           | IDENTIFIER . INCREMENT
   81           | IDENTIFIER . DECREMENT
   82           | IDENTIFIER . PLUSEQ EXPR
   83           | IDENTIFIER . MINUSEQ EXPR
   84           | IDENTIFIER . MULTIPLYEQ EXPR
   85           | IDENTIFIER . DIVIDEEQ EXPR

    OPENBRACKET  shift, and go to state 33
    INCREMENT    shift, and go to state 34
    DECREMENT    shift, and go to state 35
    EQUAL        shift, and go to state 36
    MINUSEQ      shift, and go to state 37
    PLUSEQ       shift, and go to state 38
    MULTIPLYEQ   shift, and go to state 39
    DIVIDEEQ     shift, and go to state 40


state 6

   29 if_start: IF . OPENBRACKET condition CLOSEDBRACKET

    OPENBRACKET  shift, and go to state 41


state 7

   39 forloop: FOR . OPENBRACKET enter_scope iterator COMMA assignment CLOSEDBRACKET for_loop_start OPENBRACE code DOT CLOSEDBRACE exit_scope

    OPENBRACKET  shift, and go to state 42


state 8

   37 repeat: REPEAT . OPENBRACE enter_scope repeat_start code DOT CLOSEDBRACE exit_scope UNTIL OPENBRACKET condition CLOSEDBRACKET

    OPENBRACE  shift, and go to state 43


state 9

   16 inner_code: BREAK .

    $default  reduce using rule 16 (inner_code)


state 10

   42 while_start: WHILE . OPENBRACKET condition CLOSEDBRACKET

    OPENBRACKET  shift, and go to state 44


state 11

   54 switch_start: SWITCH . OPENBRACKET IDENTIFIER CLOSEDBRACKET

    OPENBRACKET  shift, and go to state 45


state 12

   14 inner_code: RETURN . EXPR
   15           | RETURN .

    MINUS        shift, and go to state 46
    OPENBRACKET  shift, and go to state 47
    INTEGER      shift, and go to state 48
    FLOAT        shift, and go to state 49
    IDENTIFIER   shift, and go to state 50

    $default  reduce using rule 15 (inner_code)

    function_call  go to state 51
    EXPR           go to state 52
    T              go to state 53
    M              go to state 54
    G              go to state 55


state 13

   47 function_header: VOIDTYPE . IDENTIFIER OPENBRACKET

    IDENTIFIER  shift, and go to state 56


state 14

    0 $accept: Start . $end

    $end  shift, and go to state 57


state 15

    1 Start: S .

    $default  reduce using rule 1 (Start)


state 16

    2 S: code . DOT
    4 code: code . DOT inner_code

    DOT  shift, and go to state 58


state 17

    3 code: inner_code .

    $default  reduce using rule 3 (code)


state 18

   21 const_type: datatype . CONST
   22 declaration: datatype . inner_declaration
   46 function_header: datatype . IDENTIFIER OPENBRACKET

    IDENTIFIER  shift, and go to state 59
    CONST       shift, and go to state 60

    inner_declaration  go to state 61


state 19

   23 declaration: const_type . inner_declaration

    IDENTIFIER  shift, and go to state 62

    inner_declaration  go to state 63


state 20

    6 inner_code: declaration .

    $default  reduce using rule 6 (inner_code)


state 21

   31 Ifstmt: if_start . OPENBRACE enter_scope code DOT CLOSEDBRACE exit_scope $@1 else_stmt
   32       | if_start . OPENBRACE enter_scope code DOT CLOSEDBRACE exit_scope

    OPENBRACE  shift, and go to state 64


state 22

    7 inner_code: Ifstmt .

    $default  reduce using rule 7 (inner_code)


state 23

   12 inner_code: repeat .

    $default  reduce using rule 12 (inner_code)


state 24

   11 inner_code: forloop .

    $default  reduce using rule 11 (inner_code)


state 25

   43 whileloop: while_start . OPENBRACE enter_scope code DOT CLOSEDBRACE exit_scope

    OPENBRACE  shift, and go to state 65


state 26

    8 inner_code: whileloop .

    $default  reduce using rule 8 (inner_code)


state 27

   48 function: function_header . enter_scope parameters CLOSEDBRACKET OPENBRACE code DOT CLOSEDBRACE exit_scope
   49         | function_header . CLOSEDBRACKET OPENBRACE enter_scope code DOT CLOSEDBRACE exit_scope

    CLOSEDBRACKET  shift, and go to state 66

    $default  reduce using rule 101 (enter_scope)

    enter_scope  go to state 67


state 28

   13 inner_code: function .

    $default  reduce using rule 13 (inner_code)


state 29

   10 inner_code: function_call .

    $default  reduce using rule 10 (inner_code)


state 30

   55 switchstmt: switch_start . OPENBRACE enter_scope case_structure DEFAULT OPENBRACE enter_scope code DOT CLOSEDBRACE exit_scope CLOSEDBRACE exit_scope
   56           | switch_start . OPENBRACE enter_scope case_structure CLOSEDBRACE exit_scope

    OPENBRACE  shift, and go to state 68


state 31

    9 inner_code: switchstmt .

    $default  reduce using rule 9 (inner_code)


state 32

    5 inner_code: assignment .

    $default  reduce using rule 5 (inner_code)


state 33

   50 function_call: IDENTIFIER OPENBRACKET . list CLOSEDBRACKET
   51              | IDENTIFIER OPENBRACKET . CLOSEDBRACKET

    MINUS          shift, and go to state 46
    OPENBRACKET    shift, and go to state 47
    CLOSEDBRACKET  shift, and go to state 69
    INTEGER        shift, and go to state 48
    FLOAT          shift, and go to state 49
    IDENTIFIER     shift, and go to state 50

    function_call  go to state 51
    list           go to state 70
    EXPR           go to state 71
    T              go to state 53
    M              go to state 54
    G              go to state 55


state 34

   80 assignment: IDENTIFIER INCREMENT .

    $default  reduce using rule 80 (assignment)


state 35

   81 assignment: IDENTIFIER DECREMENT .

    $default  reduce using rule 81 (assignment)


state 36

   77 assignment: IDENTIFIER EQUAL . EXPR
   78           | IDENTIFIER EQUAL . STRING
   79           | IDENTIFIER EQUAL . condition

    MINUS        shift, and go to state 46
    OPENBRACKET  shift, and go to state 72
    INTEGER      shift, and go to state 48
    STRING       shift, and go to state 73
    FLOAT        shift, and go to state 49
    IDENTIFIER   shift, and go to state 50
    NOT          shift, and go to state 74

    function_call    go to state 51
    condition        go to state 75
    inner_condition  go to state 76
    EXPR             go to state 77
    T                go to state 53
    M                go to state 54
    G                go to state 55


state 37

   83 assignment: IDENTIFIER MINUSEQ . EXPR

    MINUS        shift, and go to state 46
    OPENBRACKET  shift, and go to state 47
    INTEGER      shift, and go to state 48
    FLOAT        shift, and go to state 49
    IDENTIFIER   shift, and go to state 50

    function_call  go to state 51
    EXPR           go to state 78
    T              go to state 53
    M              go to state 54
    G              go to state 55


state 38

   82 assignment: IDENTIFIER PLUSEQ . EXPR

    MINUS        shift, and go to state 46
    OPENBRACKET  shift, and go to state 47
    INTEGER      shift, and go to state 48
    FLOAT        shift, and go to state 49
    IDENTIFIER   shift, and go to state 50

    function_call  go to state 51
    EXPR           go to state 79
    T              go to state 53
    M              go to state 54
    G              go to state 55


state 39

   84 assignment: IDENTIFIER MULTIPLYEQ . EXPR

    MINUS        shift, and go to state 46
    OPENBRACKET  shift, and go to state 47
    INTEGER      shift, and go to state 48
    FLOAT        shift, and go to state 49
    IDENTIFIER   shift, and go to state 50

    function_call  go to state 51
    EXPR           go to state 80
    T              go to state 53
    M              go to state 54
    G              go to state 55


state 40

   85 assignment: IDENTIFIER DIVIDEEQ . EXPR

    MINUS        shift, and go to state 46
    OPENBRACKET  shift, and go to state 47
    INTEGER      shift, and go to state 48
    FLOAT        shift, and go to state 49
    IDENTIFIER   shift, and go to state 50

    function_call  go to state 51
    EXPR           go to state 81
    T              go to state 53
    M              go to state 54
    G              go to state 55


state 41

   29 if_start: IF OPENBRACKET . condition CLOSEDBRACKET

    MINUS        shift, and go to state 46
    OPENBRACKET  shift, and go to state 72
    INTEGER      shift, and go to state 48
    FLOAT        shift, and go to state 49
    IDENTIFIER   shift, and go to state 50
    NOT          shift, and go to state 74

    function_call    go to state 51
    condition        go to state 82
    inner_condition  go to state 76
    EXPR             go to state 83
    T                go to state 53
    M                go to state 54
    G                go to state 55


state 42

   39 forloop: FOR OPENBRACKET . enter_scope iterator COMMA assignment CLOSEDBRACKET for_loop_start OPENBRACE code DOT CLOSEDBRACE exit_scope

    $default  reduce using rule 101 (enter_scope)

    enter_scope  go to state 84


state 43

   37 repeat: REPEAT OPENBRACE . enter_scope repeat_start code DOT CLOSEDBRACE exit_scope UNTIL OPENBRACKET condition CLOSEDBRACKET

    $default  reduce using rule 101 (enter_scope)

    enter_scope  go to state 85


state 44

   42 while_start: WHILE OPENBRACKET . condition CLOSEDBRACKET

    MINUS        shift, and go to state 46
    OPENBRACKET  shift, and go to state 72
    INTEGER      shift, and go to state 48
    FLOAT        shift, and go to state 49
    IDENTIFIER   shift, and go to state 50
    NOT          shift, and go to state 74

    function_call    go to state 51
    condition        go to state 86
    inner_condition  go to state 76
    EXPR             go to state 83
    T                go to state 53
    M                go to state 54
    G                go to state 55


state 45

   54 switch_start: SWITCH OPENBRACKET . IDENTIFIER CLOSEDBRACKET

    IDENTIFIER  shift, and go to state 87


state 46

   96 G: MINUS . G

    MINUS        shift, and go to state 46
    OPENBRACKET  shift, and go to state 47
    INTEGER      shift, and go to state 48
    FLOAT        shift, and go to state 49
    IDENTIFIER   shift, and go to state 50

    function_call  go to state 51
    G              go to state 88


state 47

   95 G: OPENBRACKET . EXPR CLOSEDBRACKET

    MINUS        shift, and go to state 46
    OPENBRACKET  shift, and go to state 47
    INTEGER      shift, and go to state 48
    FLOAT        shift, and go to state 49
    IDENTIFIER   shift, and go to state 50

    function_call  go to state 51
    EXPR           go to state 89
    T              go to state 53
    M              go to state 54
    G              go to state 55


state 48

   97 G: INTEGER .

    $default  reduce using rule 97 (G)


state 49

   98 G: FLOAT .

    $default  reduce using rule 98 (G)


state 50

   50 function_call: IDENTIFIER . OPENBRACKET list CLOSEDBRACKET
   51              | IDENTIFIER . OPENBRACKET CLOSEDBRACKET
   99 G: IDENTIFIER .

    OPENBRACKET  shift, and go to state 33

    $default  reduce using rule 99 (G)


state 51

  100 G: function_call .

    $default  reduce using rule 100 (G)


state 52

   14 inner_code: RETURN EXPR .
   86 EXPR: EXPR . PLUS T
   87     | EXPR . MINUS T

    MINUS  shift, and go to state 90
    PLUS   shift, and go to state 91

    $default  reduce using rule 14 (inner_code)


state 53

   88 EXPR: T .
   89 T: T . MULTIPLY M
   90  | T . DIVIDE M
   91  | T . MOD M

    MULTIPLY  shift, and go to state 92
    DIVIDE    shift, and go to state 93
    MOD       shift, and go to state 94

    $default  reduce using rule 88 (EXPR)


state 54

   92 T: M .

    $default  reduce using rule 92 (T)


state 55

   93 M: G . POWER M
   94  | G .

    POWER  shift, and go to state 95

    $default  reduce using rule 94 (M)


state 56

   47 function_header: VOIDTYPE IDENTIFIER . OPENBRACKET

    OPENBRACKET  shift, and go to state 96


state 57

    0 $accept: Start $end .

    $default  accept


state 58

    2 S: code DOT .
    4 code: code DOT . inner_code

    BOOLTYPE    shift, and go to state 1
    INTTYPE     shift, and go to state 2
    FLOATTYPE   shift, and go to state 3
    STRINGTYPE  shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    IF          shift, and go to state 6
    FOR         shift, and go to state 7
    REPEAT      shift, and go to state 8
    BREAK       shift, and go to state 9
    WHILE       shift, and go to state 10
    SWITCH      shift, and go to state 11
    RETURN      shift, and go to state 12
    VOIDTYPE    shift, and go to state 13

    $default  reduce using rule 2 (S)

    inner_code       go to state 97
    datatype         go to state 18
    const_type       go to state 19
    declaration      go to state 20
    if_start         go to state 21
    Ifstmt           go to state 22
    repeat           go to state 23
    forloop          go to state 24
    while_start      go to state 25
    whileloop        go to state 26
    function_header  go to state 27
    function         go to state 28
    function_call    go to state 29
    switch_start     go to state 30
    switchstmt       go to state 31
    assignment       go to state 32


state 59

   24 inner_declaration: IDENTIFIER .
   25                  | IDENTIFIER . EQUAL EXPR
   26                  | IDENTIFIER . EQUAL BOOLEAN
   27                  | IDENTIFIER . EQUAL STRING
   28                  | IDENTIFIER . EQUAL condition
   46 function_header: datatype IDENTIFIER . OPENBRACKET

    OPENBRACKET  shift, and go to state 98
    EQUAL        shift, and go to state 99

    $default  reduce using rule 24 (inner_declaration)


state 60

   21 const_type: datatype CONST .

    $default  reduce using rule 21 (const_type)


state 61

   22 declaration: datatype inner_declaration .

    $default  reduce using rule 22 (declaration)


state 62

   24 inner_declaration: IDENTIFIER .
   25                  | IDENTIFIER . EQUAL EXPR
   26                  | IDENTIFIER . EQUAL BOOLEAN
   27                  | IDENTIFIER . EQUAL STRING
   28                  | IDENTIFIER . EQUAL condition

    EQUAL  shift, and go to state 99

    $default  reduce using rule 24 (inner_declaration)


state 63

   23 declaration: const_type inner_declaration .

    $default  reduce using rule 23 (declaration)


state 64

   31 Ifstmt: if_start OPENBRACE . enter_scope code DOT CLOSEDBRACE exit_scope $@1 else_stmt
   32       | if_start OPENBRACE . enter_scope code DOT CLOSEDBRACE exit_scope

    $default  reduce using rule 101 (enter_scope)

    enter_scope  go to state 100


state 65

   43 whileloop: while_start OPENBRACE . enter_scope code DOT CLOSEDBRACE exit_scope

    $default  reduce using rule 101 (enter_scope)

    enter_scope  go to state 101


state 66

   49 function: function_header CLOSEDBRACKET . OPENBRACE enter_scope code DOT CLOSEDBRACE exit_scope

    OPENBRACE  shift, and go to state 102


state 67

   48 function: function_header enter_scope . parameters CLOSEDBRACKET OPENBRACE code DOT CLOSEDBRACE exit_scope

    BOOLTYPE    shift, and go to state 1
    INTTYPE     shift, and go to state 2
    FLOATTYPE   shift, and go to state 3
    STRINGTYPE  shift, and go to state 4

    datatype    go to state 103
    parameters  go to state 104


state 68

   55 switchstmt: switch_start OPENBRACE . enter_scope case_structure DEFAULT OPENBRACE enter_scope code DOT CLOSEDBRACE exit_scope CLOSEDBRACE exit_scope
   56           | switch_start OPENBRACE . enter_scope case_structure CLOSEDBRACE exit_scope

    $default  reduce using rule 101 (enter_scope)

    enter_scope  go to state 105


state 69

   51 function_call: IDENTIFIER OPENBRACKET CLOSEDBRACKET .

    $default  reduce using rule 51 (function_call)


state 70

   50 function_call: IDENTIFIER OPENBRACKET list . CLOSEDBRACKET

    CLOSEDBRACKET  shift, and go to state 106


state 71

   52 list: EXPR .
   53     | EXPR . COMMA list
   86 EXPR: EXPR . PLUS T
   87     | EXPR . MINUS T

    MINUS  shift, and go to state 90
    PLUS   shift, and go to state 91
    COMMA  shift, and go to state 107

    $default  reduce using rule 52 (list)


state 72

   68 inner_condition: OPENBRACKET . condition CLOSEDBRACKET
   95 G: OPENBRACKET . EXPR CLOSEDBRACKET

    MINUS        shift, and go to state 46
    OPENBRACKET  shift, and go to state 72
    INTEGER      shift, and go to state 48
    FLOAT        shift, and go to state 49
    IDENTIFIER   shift, and go to state 50
    NOT          shift, and go to state 74

    function_call    go to state 51
    condition        go to state 108
    inner_condition  go to state 76
    EXPR             go to state 109
    T                go to state 53
    M                go to state 54
    G                go to state 55


state 73

   78 assignment: IDENTIFIER EQUAL STRING .

    $default  reduce using rule 78 (assignment)


state 74

   63 condition: NOT . inner_condition
   67          | NOT . EXPR

    MINUS        shift, and go to state 46
    OPENBRACKET  shift, and go to state 72
    INTEGER      shift, and go to state 48
    FLOAT        shift, and go to state 49
    IDENTIFIER   shift, and go to state 50

    function_call    go to state 51
    inner_condition  go to state 110
    EXPR             go to state 111
    T                go to state 53
    M                go to state 54
    G                go to state 55


state 75

   61 condition: condition . AND inner_condition
   62          | condition . OR inner_condition
   65          | condition . AND EXPR
   66          | condition . OR EXPR
   79 assignment: IDENTIFIER EQUAL condition .

    AND  shift, and go to state 112
    OR   shift, and go to state 113

    $default  reduce using rule 79 (assignment)


state 76

   64 condition: inner_condition .

    $default  reduce using rule 64 (condition)


state 77

   69 inner_condition: EXPR . GREATERTHAN EXPR
   70                | EXPR . GREATERTHANEQ EXPR
   71                | EXPR . LESSTHAN EXPR
   72                | EXPR . LESSTHANEQ EXPR
   73                | EXPR . EQUALITY BOOLEAN
   74                | EXPR . EQUALITY EXPR
   75                | EXPR . NOTEQUALITY BOOLEAN
   76                | EXPR . NOTEQUALITY EXPR
   77 assignment: IDENTIFIER EQUAL EXPR .
   86 EXPR: EXPR . PLUS T
   87     | EXPR . MINUS T

    MINUS          shift, and go to state 90
    PLUS           shift, and go to state 91
    GREATERTHANEQ  shift, and go to state 114
    LESSTHAN       shift, and go to state 115
    GREATERTHAN    shift, and go to state 116
    LESSTHANEQ     shift, and go to state 117
    EQUALITY       shift, and go to state 118
    NOTEQUALITY    shift, and go to state 119

    $default  reduce using rule 77 (assignment)


state 78

   83 assignment: IDENTIFIER MINUSEQ EXPR .
   86 EXPR: EXPR . PLUS T
   87     | EXPR . MINUS T

    MINUS  shift, and go to state 90
    PLUS   shift, and go to state 91

    $default  reduce using rule 83 (assignment)


state 79

   82 assignment: IDENTIFIER PLUSEQ EXPR .
   86 EXPR: EXPR . PLUS T
   87     | EXPR . MINUS T

    MINUS  shift, and go to state 90
    PLUS   shift, and go to state 91

    $default  reduce using rule 82 (assignment)


state 80

   84 assignment: IDENTIFIER MULTIPLYEQ EXPR .
   86 EXPR: EXPR . PLUS T
   87     | EXPR . MINUS T

    MINUS  shift, and go to state 90
    PLUS   shift, and go to state 91

    $default  reduce using rule 84 (assignment)


state 81

   85 assignment: IDENTIFIER DIVIDEEQ EXPR .
   86 EXPR: EXPR . PLUS T
   87     | EXPR . MINUS T

    MINUS  shift, and go to state 90
    PLUS   shift, and go to state 91

    $default  reduce using rule 85 (assignment)


state 82

   29 if_start: IF OPENBRACKET condition . CLOSEDBRACKET
   61 condition: condition . AND inner_condition
   62          | condition . OR inner_condition
   65          | condition . AND EXPR
   66          | condition . OR EXPR

    CLOSEDBRACKET  shift, and go to state 120
    AND            shift, and go to state 112
    OR             shift, and go to state 113


state 83

   69 inner_condition: EXPR . GREATERTHAN EXPR
   70                | EXPR . GREATERTHANEQ EXPR
   71                | EXPR . LESSTHAN EXPR
   72                | EXPR . LESSTHANEQ EXPR
   73                | EXPR . EQUALITY BOOLEAN
   74                | EXPR . EQUALITY EXPR
   75                | EXPR . NOTEQUALITY BOOLEAN
   76                | EXPR . NOTEQUALITY EXPR
   86 EXPR: EXPR . PLUS T
   87     | EXPR . MINUS T

    MINUS          shift, and go to state 90
    PLUS           shift, and go to state 91
    GREATERTHANEQ  shift, and go to state 114
    LESSTHAN       shift, and go to state 115
    GREATERTHAN    shift, and go to state 116
    LESSTHANEQ     shift, and go to state 117
    EQUALITY       shift, and go to state 118
    NOTEQUALITY    shift, and go to state 119


state 84

   39 forloop: FOR OPENBRACKET enter_scope . iterator COMMA assignment CLOSEDBRACKET for_loop_start OPENBRACE code DOT CLOSEDBRACE exit_scope

    INTTYPE     shift, and go to state 121
    IDENTIFIER  shift, and go to state 122

    iterator  go to state 123


state 85

   37 repeat: REPEAT OPENBRACE enter_scope . repeat_start code DOT CLOSEDBRACE exit_scope UNTIL OPENBRACKET condition CLOSEDBRACKET

    $default  reduce using rule 36 (repeat_start)

    repeat_start  go to state 124


state 86

   42 while_start: WHILE OPENBRACKET condition . CLOSEDBRACKET
   61 condition: condition . AND inner_condition
   62          | condition . OR inner_condition
   65          | condition . AND EXPR
   66          | condition . OR EXPR

    CLOSEDBRACKET  shift, and go to state 125
    AND            shift, and go to state 112
    OR             shift, and go to state 113


state 87

   54 switch_start: SWITCH OPENBRACKET IDENTIFIER . CLOSEDBRACKET

    CLOSEDBRACKET  shift, and go to state 126


state 88

   96 G: MINUS G .

    $default  reduce using rule 96 (G)


state 89

   86 EXPR: EXPR . PLUS T
   87     | EXPR . MINUS T
   95 G: OPENBRACKET EXPR . CLOSEDBRACKET

    MINUS          shift, and go to state 90
    PLUS           shift, and go to state 91
    CLOSEDBRACKET  shift, and go to state 127


state 90

   87 EXPR: EXPR MINUS . T

    MINUS        shift, and go to state 46
    OPENBRACKET  shift, and go to state 47
    INTEGER      shift, and go to state 48
    FLOAT        shift, and go to state 49
    IDENTIFIER   shift, and go to state 50

    function_call  go to state 51
    T              go to state 128
    M              go to state 54
    G              go to state 55


state 91

   86 EXPR: EXPR PLUS . T
